--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">YAGC</string>
+    <string name="NAME_SHARED_PREFERENCES">MySharedPreferences</string>
+    <string name="KEY_ACCESS_TOKEN">KEY_ACCESS_TOKEN</string>
+    <string name="notset">NotSet</string>
 </resources>
