Added Pagination for the recycler view.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,6 @@
     <string name="KEY_ACCESS_TOKEN">KEY_ACCESS_TOKEN</string>
     <string name="notset">NotSet</string>
     <string name="KEY_CREDENTIALS_TOKEN">KEY_CREDENTIALS_USERNAME_PASSWORD</string>
+    <string name="events">Events</string>
+    <string name="my_home">My Home</string>
 </resources>
